OO-6417 implementing readme file into export zip